takamaka_examples/src/takamaka/tests/errors/legalexceptionhandler1/MyCheckedException.java
package takamaka.tests.errors.legalexceptionhandler1;

public class MyCheckedException extends Exception {
	private static final long serialVersionUID = 1L;
}